# ai-passport

./: .env.example  .firebaserc  .gitignore  README.md  firebase.json  pyproject.toml
.github/workflows/: publish-npm.yml
cli/: package.json
passport/: __init__.py  cli.py  generator.py  metrics.py  qr_art.py  reader.py  reader_codex.py  schema.py  scoring.py
tests/: test_metrics.py  test_reader.py  test_reader_codex.py
tests/fixtures/: sample_codex_session.jsonl  sample_session.jsonl
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css
ui/src/components/: BadgeGrid.tsx  RadarChart.tsx  ScoreRing.tsx  ShareButtons.tsx  SpecialtyCard.tsx  StrengthBar.tsx
ui/src/pages/: Landing.tsx  MiniPassport.tsx  Review.tsx  Upload.tsx
ui/src/types/: profile.ts
ui/src/utils/: shareCard.ts
