[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-passport"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "click>=8.0",
    "qrcode[pil]>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
passport = "passport.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["passport*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=passport --cov-report=term-missing"
